# coffee

./: README.md  coffeebrewer  coffeebrewer-old  coffeebrewer2  coffeebrewer3
archiso/releng/: packages.x86_64  profiledef.sh
archiso/releng/airootfs/root/coffeebrewer/: .gitignore  .gitlab-ci.yml  PKGBUILD  pyproject.toml  setup.cfg  setup.py
archiso/releng/airootfs/root/coffeebrewer/coffeebrewer/: __init__.py  __main__.py
archiso/releng/airootfs/root/coffeebrewer/coffeebrewer/lib/: configuration.py  general.py  installer.py  luks.py  output.py  pacman.py  plugins.py  storage.py  systemd.py
archiso/releng/airootfs/root/coffeebrewer/coffeebrewer/lib/menu/: abstract_menu.py  global_menu.py
archiso/releng/airootfs/root/coffeebrewer/coffeebrewer/lib/user_interaction/: __init__.py  disk_conf.py  general_conf.py
archiso/releng/airootfs/root/coffeebrewer/docs/: conf.py  index.rst
archiso/releng/airootfs/root/coffeebrewer/docs/archinstall/: Application.rst  Installer.rst  Profile.rst  general.rst
archiso/releng/airootfs/root/coffeebrewer/docs/examples/: binary.rst  python.rst
archiso/releng/airootfs/root/coffeebrewer/docs/help/: issues.rst
archiso/releng/airootfs/root/coffeebrewer/docs/installing/: binary.rst  guided.rst  python.rst
archiso/releng/airootfs/root/coffeebrewer/examples/: guided.py  minimal.py  only_hd.py  swiss.py  unattended.py
archiso/releng/airootfs/root/coffeebrewer/profiles/: 52-54-00-12-34-56.py  awesome.py  bspwm.py  budgie.py  cinnamon.py  cutefish.py  deepin.py  desktop.py  enlightenment.py  gnome.py  i3.py  kde.py  lxqt.py  mate.py  minimal.py  qtile.py  server.py  sway.py  xfce4.py  xorg.py
archiso/releng/airootfs/root/coffeebrewer/profiles/applications/: awesome.py  cockpit.py  docker.py  httpd.py  lighttpd.py  mariadb.py  nginx.py  pipewire.py  postgresql.py  sshd.py  tomcat.py
archiso/releng/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
coffeelinux-archiso/: README.md
coffeelinux-archiso mod/: README.md
coffeelinux-archiso mod/releng/: packages.x86_64  pacman.conf  profiledef.sh
coffeelinux-archiso-minimal/releng/: profiledef.sh
coffeelinux-archiso/releng/: packages.x86_64  pacman.conf  profiledef.sh
coffeelinux-archiso/releng/grub/: grub.cfg  (+1 more)
coffeelinux-liveiso-mod/releng/: packages.x86_64  profiledef.sh
releng/: bootstrap_packages.x86_64  packages.x86_64  pacman.conf  profiledef.sh
releng/efiboot/: amd-ucode.img
releng/grub/: grub.cfg
releng/syslinux/: archiso_pxe-linux.cfg
(+174 files in other folders)
