[build-system]
requires = ["flit_core >=3.5.1,<4", "setuptools>=45", "wheel"]
build-backend = "flit_core.buildapi"

[project]
name = "coffeebrewer"
dynamic = ["version"]
description = "Coffee Linux installer - guided, templates etc."
authors = [
    {name = "Anton Hvornum", email = "anton@hvornum.se"},
]
readme = "README.md"
requires-python = ">=3.10"

keywords = ["linux", "arch", "coffeebrewer", "installer"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Home = "https://archlinux.org"
Documentation = "https://coffeebrewer.readthedocs.io/"
Source = "https://github.com/Project-X-Mods/coffeebrewer"

[project.scripts]
coffeebrewer = "coffeebrewer:run_as_a_module"

[project.optional-dependencies]
doc = ["sphinx"]

[tool.flit.sdist]
include = ["docs/", "profiles", "examples", "coffeebrewer/profiles", "coffeebrewer/examples"]
exclude = ["docs/*.html", "docs/_static", "docs/*.png", "docs/*.psd"]

[tool.mypy]
python_version = "3.10"
exclude = "tests"

[tool.bandit]
targets = ["ourkvm"]
exclude = ["/tests"]
