[metadata]
name = coffeebrewer
version = attr: coffeebrewer.__version__
description = Coffee Linux installer - guided, templates etc.
author = Anton Hvornum
author_email = anton@hvornum.se
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files =
    LICENSE
project_urls =
    Source = https://github.com/Project-X-Mods/coffeebrewer
    Documentation = https://coffeebrewer.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.8

[options.packages.find]
include =
    coffeebrewer
    coffeebrewer.*

[options.package_data]
coffeebrewer =
    examples/*.py
    profiles/*.py
    profiles/applications/*.py

[options.entry_points]
console_scripts =
    coffeebrewer = coffeebrewer:run_as_a_module
